--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <img src="icona4.svg" alt="Montignoso">
         </a>
 
-        <a href="https://sito5.com" class="grid-item">
+        <a href="https://drive.google.com/drive/folders/1PMXmsSXfSTzlY-qTlGKgC5AEAp4cE6DM" class="grid-item">
             <img src="icona5.svg" alt="Pietrasanta">
         </a>
         <a href="https://sito6.com" class="grid-item">
@@ -132,4 +132,5 @@
     </footer>
 
 </body>
+
 </html>
