--- a/index.html
+++ b/index.html
@@ -94,28 +94,28 @@
 
     <main class="main-content">
         <a href="https://sito1.com" class="grid-item">
-            <img src="icona1.svg" alt="Camaiore">
+            <img src="camaiore.png" alt="Camaiore">
         </a>
         <a href="https://sito2.com" class="grid-item">
-            <img src="icona2.svg" alt="Forte dei Marmi">
+            <img src="fdm.png" alt="Forte dei Marmi">
         </a>
 
         <a href="https://sito3.com" class="grid-item">
-            <img src="icona3.svg" alt="Massarosa">
+            <img src="massarosa.png" alt="Massarosa">
         </a>
         <a href="https://sito4.com" class="grid-item">
-            <img src="icona4.svg" alt="Montignoso">
+            <img src="montignoso.png" alt="Montignoso">
         </a>
 
         <a href="https://drive.google.com/drive/folders/1PMXmsSXfSTzlY-qTlGKgC5AEAp4cE6DM" class="grid-item">
-            <img src="icona5.svg" alt="Pietrasanta">
+            <img src="pietrasanta.png" alt="Pietrasanta">
         </a>
         <a href="https://sito6.com" class="grid-item">
-            <img src="icona6.svg" alt="Seravezza">
+            <img src="seravezza.png" alt="Seravezza">
         </a>
 
         <a href="https://sito7.com" class="grid-item">
-            <img src="icona7.svg" alt="Stazzema">
+            <img src="stazzema.png" alt="Stazzema">
         </a>
         <a href="https://sito8.com" class="grid-item">
             <img src="icona8.svg" alt="Link 8">
@@ -134,3 +134,4 @@
 </body>
 
 </html>
+
