--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <footer>
         <div class="footer-links">
             <a href="#">Link1</a>
-            <a href="#">Link2</a>
+            <a href="https://drive.google.com/file/d/1y11JstruZxgq-VSLvjSuxFWLEFW2RuA1/view">Meccanici</a>
             <a href="#">Link3</a>
             <a href="#">Link4</a>
         </div>
@@ -134,4 +134,5 @@
 </body>
 
 </html>
+
 
