--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
 
-    <img src="https://via.placeholder.com/800x200" alt="Header" class="header-img">
+    <img src="header.jpg" alt="Header" class="header-img">
 
     <main class="main-content">
         <a href="https://sito1.com" class="grid-item">
@@ -134,5 +134,6 @@
 </body>
 
 </html>
+
 
 
