--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             display: flex;
             flex-direction: column;
             /* Immagine di Sfondo */
-            background-image: url('tuo-sfondo.jpg'); 
+            background-image: wllpaper.jpg; 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -134,6 +134,7 @@
 </body>
 
 </html>
+
 
 
 
