--- a/index.html
+++ b/index.html
@@ -33,15 +33,17 @@
 
         /* Contenitore Centrale (Griglia) */
         .main-content {
-            flex: 1;
-            display: grid;
-            grid-template-columns: repeat(2, 1sfr); /* 2 colonne */
-            grid-template-rows: repeat(4, auto);   /* 4 righe */
-            gap: 20px;
-            padding: 40px 20px;
-            justify-items: center;
-            align-items: center;
-        }
+    flex: 1;
+    display: grid;
+    /* Correggi la riga qui sotto: deve essere "1fr 1fr" */
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(4, auto);   
+    gap: 20px;
+    padding: 40px 20px;
+    justify-items: center;
+    align-items: center;
+    width: 100%; /* Assicurati che prenda tutta la larghezza */
+}
 
         .grid-item {
             width: 100%;
@@ -134,6 +136,7 @@
 </body>
 
 </html>
+
 
 
 
