--- a/index.html
+++ b/index.html
@@ -126,16 +126,17 @@
 
     <footer>
         <div class="footer-links">
-            <a href="#">Link1</a>
+            <a href="#">Coordinatori</a>
             <a href="https://drive.google.com/file/d/1y11JstruZxgq-VSLvjSuxFWLEFW2RuA1/view">Meccanici</a>
-            <a href="#">Link3</a>
-            <a href="#">Link4</a>
+            <a href="#">Malattie</a>
+            <a href="#">Rubrica</a>
         </div>
     </footer>
 
 </body>
 
 </html>
+
 
 
 
