--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <footer>
         <div class="footer-links">
-            <a href="#">Coordinatori</a>
+            <a href="https://ersudriver.github.io/ersuoperator/coordinatori">Coordinatori</a>
             <a href="https://drive.google.com/file/d/1y11JstruZxgq-VSLvjSuxFWLEFW2RuA1/view">Meccanici</a>
             <a href="#">Malattie</a>
             <a href="#">Rubrica</a>
@@ -141,4 +141,5 @@
 
 </body>
 </html>
+
 
