--- a/index.html
+++ b/index.html
@@ -3,143 +3,152 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portale Operatori</title>
+    <title>Tabella Contatti</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     
     <style>
-        /* Reset e Stili Base */
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
         body {
-            /* Applicazione del font Josefin Sans a tutto il corpo */
             font-family: 'Josefin Sans', sans-serif;
-            min-height: 100vh;
+            background-color: #f4f4f9;
+            padding: 20px;
             display: flex;
             flex-direction: column;
-            /* Immagine di Sfondo */
-            background-image: url('wllpaper.jpg'); 
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-        }
-
-        /* Immagine Orizzontale Superiore */
-        .header-img {
-            width: 100%;
-            height: auto;
-            display: block;
-        }
-
-        /* Footer - Posizionato SOTTO l'Header */
-        footer {
-            background-color: rgba(0, 0, 0, 0.7); 
-            color: white;
-            padding: 20px;
-            text-align: center;
-            width: 100%;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: space-around;
-            flex-wrap: wrap;
-            gap: 10px;
-        }
-
-        .footer-links a {
-            color: white;
-            text-decoration: none;
-            font-size: 16px; /* Leggermente aumentato per Josefin Sans */
-            font-weight: 600; /* Peso semi-bold per migliore leggibilità */
-            letter-spacing: 0.5px;
-        }
-
-        /* Contenitore Centrale (Griglia) */
-        .main-content {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr); 
-            gap: 20px;
-            padding: 40px 20px;
-            justify-items: center;
             align-items: center;
+        }
+
+        table {
             width: 100%;
+            max-width: 800px;
+            border-collapse: collapse;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            overflow: hidden;
+            margin-bottom: 30px; /* Spazio per il pulsante */
         }
 
-        .grid-item {
-            width: 100%;
-            max-width: 120px;
-            transition: transform 0.2s;
+        thead {
+            background-color: #333;
+            color: white;
         }
 
-        .grid-item:active {
-            transform: scale(0.9);
+        th {
+            padding: 15px;
+            text-align: left;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
         }
 
-        .grid-item img {
-            width: 100%;
-            height: auto;
-            display: block;
+        td {
+            padding: 12px 15px;
+            border-bottom: 1px solid #ddd;
+            color: #333;
         }
 
-        /* Ottimizzazione per Mobile */
+        tbody tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        td a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        /* Stile Pulsante Scarica */
+        .btn-download {
+            background-color: #28a745;
+            color: white;
+            padding: 15px 25px;
+            text-decoration: none;
+            border-radius: 50px;
+            font-weight: 600;
+            display: inline-block;
+            transition: background-color 0.3s, transform 0.2s;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            border: none;
+            cursor: pointer;
+            font-family: 'Josefin Sans', sans-serif;
+            font-size: 16px;
+        }
+
+        .btn-download:active {
+            transform: scale(0.95);
+            background-color: #218838;
+        }
+
         @media (max-width: 480px) {
-            .main-content {
-                gap: 15px;
-                padding: 20px 10px;
+            th, td {
+                padding: 10px;
+                font-size: 14px;
+            }
+            .btn-download {
+                width: 100%;
+                text-align: center;
             }
         }
     </style>
 </head>
 <body>
 
-    <img src="header.jpg" alt="Header" class="header-img">
+    <table>
+        <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Telefono</th>
+                <th>Territorio</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mario Rossi</td>
+                <td><a href="tel:+390584123456">0584 123456</a></td>
+                <td>Camaiore</td>
+            </tr>
+            <tr>
+                <td>Luca Bianchi</td>
+                <td><a href="tel:+390584223344">0584 223344</a></td>
+                <td>Forte dei Marmi</td>
+            </tr>
+            <tr>
+                <td>Giulia Verdi</td>
+                <td><a href="tel:+390584334455">0584 334455</a></td>
+                <td>Massarosa</td>
+            </tr>
+            <tr>
+                <td>Alessandro Neri</td>
+                <td><a href="tel:+390585112233">0585 112233</a></td>
+                <td>Montignoso</td>
+            </tr>
+            <tr>
+                <td>Elena Bruni</td>
+                <td><a href="tel:+390584556677">0584 556677</a></td>
+                <td>Pietrasanta</td>
+            </tr>
+            <tr>
+                <td>Roberto Gialli</td>
+                <td><a href="tel:+390584998877">0584 998877</a></td>
+                <td>Seravezza</td>
+            </tr>
+            <tr>
+                <td>Sofia Viola</td>
+                <td><a href="tel:+390584887766">0584 887766</a></td>
+                <td>Stazzema</td>
+            </tr>
+            <tr>
+                <td>Marco Arancio</td>
+                <td><a href="tel:+390584111222">0584 111222</a></td>
+                <td>Viareggio</td>
+            </tr>
+        </tbody>
+    </table>
 
-    <footer>
-        <div class="footer-links">
-            <a href="https://ersudriver.github.io/ersuoperator/coordinatori">Coordinatori</a>
-            <a href="https://drive.google.com/file/d/1y11JstruZxgq-VSLvjSuxFWLEFW2RuA1/view">Meccanici</a>
-            <a href="#">Malattie</a>
-            <a href="#">Rubrica</a>
-        </div>
-    </footer>
-
-    <main class="main-content">
-        <a href="https://sito1.com" class="grid-item">
-            <img src="camaiore.png" alt="Camaiore">
-        </a>
-        <a href="https://sito2.com" class="grid-item">
-            <img src="fdm.png" alt="Forte dei Marmi">
-        </a>
-
-        <a href="https://sito3.com" class="grid-item">
-            <img src="massarosa.png" alt="Massarosa">
-        </a>
-        <a href="https://sito4.com" class="grid-item">
-            <img src="montignoso.png" alt="Montignoso">
-        </a>
-
-        <a href="https://drive.google.com/drive/folders/1PMXmsSXfSTzlY-qTlGKgC5AEAp4cE6DM" class="grid-item">
-            <img src="pietrasanta.png" alt="Pietrasanta">
-        </a>
-        <a href="https://sito6.com" class="grid-item">
-            <img src="seravezza.png" alt="Seravezza">
-        </a>
-
-        <a href="https://sito7.com" class="grid-item">
-            <img src="stazzema.png" alt="Stazzema">
-        </a>
-        <a href="https://sito8.com" class="grid-item">
-            <img src="icona8.svg" alt="Link 8">
-        </a>
-    </main>
+    <a href="rubrica.vcf" class="btn-download">
+        scarica questi contatti in rubrica
+    </a>
 
 </body>
 </html>
-
-
