--- a/coordinatori.html
+++ b/coordinatori.html
@@ -104,49 +104,34 @@
         </thead>
         <tbody>
             <tr>
-                <td>Mario Rossi</td>
+                <td>Ronchi</td>
                 <td><a href="tel:+390584123456">0584 123456</a></td>
                 <td>Camaiore</td>
             </tr>
             <tr>
-                <td>Luca Bianchi</td>
+                <td>Stagi</td>
                 <td><a href="tel:+390584223344">0584 223344</a></td>
-                <td>Forte dei Marmi</td>
+                <td>Forte dei Marmi, Stazzema</td>
             </tr>
             <tr>
-                <td>Giulia Verdi</td>
+                <td>Paoli</td>
                 <td><a href="tel:+390584334455">0584 334455</a></td>
-                <td>Massarosa</td>
+                <td>Montignoso, Massarosa</td>
             </tr>
             <tr>
-                <td>Alessandro Neri</td>
+                <td>booooh</td>
                 <td><a href="tel:+390585112233">0585 112233</a></td>
-                <td>Montignoso</td>
-            </tr>
-            <tr>
-                <td>Elena Bruni</td>
-                <td><a href="tel:+390584556677">0584 556677</a></td>
-                <td>Pietrasanta</td>
-            </tr>
-            <tr>
-                <td>Roberto Gialli</td>
-                <td><a href="tel:+390584998877">0584 998877</a></td>
                 <td>Seravezza</td>
             </tr>
             <tr>
-                <td>Sofia Viola</td>
-                <td><a href="tel:+390584887766">0584 887766</a></td>
-                <td>Stazzema</td>
-            </tr>
-            <tr>
-                <td>Marco Arancio</td>
-                <td><a href="tel:+390584111222">0584 111222</a></td>
-                <td>Viareggio</td>
+                <td>Salvatori</td>
+                <td><a href="tel:+390584556677">0584 556677</a></td>
+                <td>Pietrasanta</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="rubrica.vcf" class="btn-download">
+    <a href="coordinatori.vcf" class="btn-download">
         scarica questi contatti in rubrica
     </a>
 
