--- a/coordinatori.html
+++ b/coordinatori.html
@@ -105,17 +105,17 @@
         <tbody>
             <tr>
                 <td>Ronchi</td>
-                <td><a href="tel:+390584123456">0584 123456</a></td>
+                <td><a href="tel:+393469929088">3469929088</a></td>
                 <td>Camaiore</td>
             </tr>
             <tr>
                 <td>Stagi</td>
-                <td><a href="tel:+390584223344">0584 223344</a></td>
+                <td><a href="tel:+393382503828">3382503828</a></td>
                 <td>Forte dei Marmi, Stazzema</td>
             </tr>
             <tr>
                 <td>Paoli</td>
-                <td><a href="tel:+390584334455">0584 334455</a></td>
+                <td><a href="tel:+393452361300">3452361300</a></td>
                 <td>Montignoso, Massarosa</td>
             </tr>
             <tr>
@@ -125,8 +125,17 @@
             </tr>
             <tr>
                 <td>Salvatori</td>
-                <td><a href="tel:+390584556677">0584 556677</a></td>
+                <td><a href="tel:+393450580810">3450580810</a></td>
                 <td>Pietrasanta</td>
+            </tr>
+            <tr>
+                <td>Zerini</td>
+                <td><a href="tel:+393484838838">3484838838</a></td>
+                <td>Camaiore, Pietrasanta</td>
+            </tr>
+            <tr>
+                <td>UFFICIO</td>
+                <td><a href="tel:+390584556677">0584 556677</a></td>
             </tr>
         </tbody>
     </table>
