--- a/coordinatori.html
+++ b/coordinatori.html
@@ -11,11 +11,13 @@
     <style>
         body {
             font-family: 'Josefin Sans', sans-serif;
-            background-color: #f4f4f9;
+            /* Impostazione dello sfondo con il colore richiesto */
+            background-color: #a4c445; 
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            min-height: 100vh;
         }
 
         table {
