--- a/coordinatori.html
+++ b/coordinatori.html
@@ -12,7 +12,7 @@
         body {
             font-family: 'Josefin Sans', sans-serif;
             /* Impostazione dello sfondo con il colore richiesto */
-            background-color: #a4c445; 
+            background-color: #2a5f41; 
             padding: 20px;
             display: flex;
             flex-direction: column;
@@ -62,7 +62,7 @@
 
         /* Stile Pulsante Scarica */
         .btn-download {
-            background-color: #28a745;
+            background-color: #a4c445;
             color: white;
             padding: 15px 25px;
             text-decoration: none;
