--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             display: flex;
             flex-direction: column;
             /* Immagine di Sfondo */
-            background-image: url('wllpaper.jpg'); 
+            background-color: #a4c445;  
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -104,7 +104,7 @@
         <div class="footer-links">
             <a href="https://ersudriver.github.io/ersuoperator/coordinatori">Coordinatori</a>
             <a href="https://drive.google.com/file/d/1y11JstruZxgq-VSLvjSuxFWLEFW2RuA1/view">Meccanici</a>
-            <a href="#">Malattie</a>
+            <a href="#">Uffici</a>
             <a href="#">Rubrica</a>
         </div>
     </footer>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
