--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <footer>
         <div class="footer-links">
             <a href="https://ersudriver.github.io/ersuoperator/coordinatori">Coordinatori</a>
-            <a href="https://drive.google.com/file/d/1y11JstruZxgq-VSLvjSuxFWLEFW2RuA1/view">Meccanici</a>
+            <a href="https://ersudriver.github.io/ersuoperator/meccanici">Meccanici</a>
             <a href="#">Uffici</a>
             <a href="#">Rubrica</a>
         </div>
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
