--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
 
-    <img src="hder.jpg" alt="Header" class="header-img">
+    <img src="header.jpg" alt="Header" class="header-img">
 
     <footer>
         <div class="footer-links">
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
