--- a/coordinatori.html
+++ b/coordinatori.html
@@ -106,34 +106,39 @@
         </thead>
         <tbody>
             <tr>
-                <td>Ronchi</td>
+                <td>Ronchi Alessandro</td>
                 <td><a href="tel:+393469929088">3469929088</a></td>
                 <td>Camaiore</td>
             </tr>
             <tr>
-                <td>Stagi</td>
-                <td><a href="tel:+393382503828">3382503828</a></td>
-                <td>Forte dei Marmi, Stazzema</td>
+                <td>Stagi Roberto</td>
+                <td><a href="tel:+393406557024">3406557024</a></td>
+                <td>Forte dei Marmi</td>
             </tr>
             <tr>
-                <td>Paoli</td>
+                <td>Paoli Gionata</td>
                 <td><a href="tel:+393452361300">3452361300</a></td>
-                <td>Montignoso, Massarosa</td>
+                <td>Montignoso</td>
             </tr>
             <tr>
-                <td>booooh</td>
-                <td><a href="tel:+390585112233">0585 112233</a></td>
+                <td>Ricci Mirko</td>
+                <td><a href="tel:+393484837261">3484837261</a></td>
                 <td>Seravezza</td>
             </tr>
             <tr>
-                <td>Salvatori</td>
-                <td><a href="tel:+393450580810">3450580810</a></td>
+                <td>Salvatori Gianluca</td>
+                <td><a href="tel:+393428586758">3428586758</a></td>
                 <td>Pietrasanta</td>
             </tr>
             <tr>
-                <td>Zerini</td>
+                <td>Zerini Cristian</td>
                 <td><a href="tel:+393484838838">3484838838</a></td>
-                <td>Camaiore, Pietrasanta</td>
+                <td>Camaiore</td>
+            </tr>
+             <tr>
+                <td>Quadrelli Daniele</td>
+                <td><a href="tel:+393455927763">3455927763</a></td>
+                <td>Spazzamento</td>
             </tr>
             <tr>
                 <td>UFFICIO</td>
