--- a/coordinatori.html
+++ b/coordinatori.html
@@ -147,7 +147,7 @@
             </tr>
             <tr>
                 <td>UFFICIO</td>
-                <td><a href="tel:+390584556677">0584 556677</a></td>
+                <td><a href="tel:+390584556677">nonumber</a></td>
             </tr>
         </tbody>
     </table>
