--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <a href="https://ersudriver.github.io/ersuoperator/coordinatori">Coordinatori</a>
             <a href="https://ersudriver.github.io/ersuoperator/meccanici">Meccanici</a>
             <a href="#">Uffici</a>
-            <a href="#">Rubrica</a>
+            <a href="#">Operatori</a>
         </div>
     </footer>
 
@@ -141,6 +141,7 @@
 
 </body>
 </html>
+
 
 
 
