--- a/coordinatori.html
+++ b/coordinatori.html
@@ -156,5 +156,7 @@
         scarica questi contatti in rubrica
     </a>
 
+    <a href="index.html" class="link-home">homepage</a>
+
 </body>
 </html>
