--- a/coordinatori.html
+++ b/coordinatori.html
@@ -11,7 +11,6 @@
     <style>
         body {
             font-family: 'Josefin Sans', sans-serif;
-            /* Impostazione dello sfondo con il colore richiesto */
             background-color: #a4c445; 
             padding: 20px;
             display: flex;
@@ -28,7 +27,7 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             border-radius: 8px;
             overflow: hidden;
-            margin-bottom: 30px; /* Spazio per il pulsante */
+            margin-bottom: 30px;
         }
 
         thead {
@@ -75,11 +74,26 @@
             cursor: pointer;
             font-family: 'Josefin Sans', sans-serif;
             font-size: 16px;
+            margin-bottom: 20px; /* Spazio extra sotto il bottone */
         }
 
         .btn-download:active {
             transform: scale(0.95);
             background-color: #218838;
+        }
+
+        /* Stile Link Homepage */
+        .link-home {
+            color: #333;
+            text-decoration: none;
+            font-weight: 400;
+            font-size: 18px;
+            transition: opacity 0.3s;
+        }
+
+        .link-home:hover {
+            text-decoration: underline;
+            opacity: 0.8;
         }
 
         @media (max-width: 480px) {
@@ -148,6 +162,7 @@
             <tr>
                 <td>UFFICIO</td>
                 <td><a href="tel:+390584556677">nonumber</a></td>
+                <td>-</td>
             </tr>
         </tbody>
     </table>
